gcsweb.k8s.io/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gcsweb
  labels:
    app: gcsweb
spec:
  replicas: 2
  # selector defaults from template labels
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gcsweb
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: gcsweb
          image: gcr.io/google_containers/gcsweb-amd64:v1.0.0
          args:
            - -b=kubernetes-jenkins
            - -b=kubernetes-release
            - -b=kubernetes-release-dev
            - -p=8080
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 0.1
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
