gcsweb.k8s.io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcsweb
  namespace: gcsweb
  labels:
    app: gcsweb
spec:
  selector:
    app: gcsweb
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
